@@ -9,7 +9,6 @@ import org.bukkit.block.BlockFace;
 import org.bukkit.entity.Player;
 import org.bukkit.event.block.BlockBreakEvent;
 import org.bukkit.event.block.BlockBurnEvent;
-import org.bukkit.event.block.BlockDamageEvent;
 import org.bukkit.event.block.BlockIgniteEvent;
 import org.bukkit.event.block.BlockListener;
 import org.bukkit.event.block.BlockPistonExtendEvent;
@@ -90,69 +89,50 @@ public class TownyBlockListener extends BlockListener {
 		
 		long start = System.currentTimeMillis();
 
-		onBlockBreakEvent(event, true);
-
-		plugin.sendDebugMsg("onBlockBreakEvent took " + (System.currentTimeMillis() - start) + "ms ("+event.getPlayer().getName()+", "+event.isCancelled() +")");
-	}
-	
-	@Override
-	public void onBlockDamage(BlockDamageEvent event) {
-		
-	}
-	
-	public void onBlockBreakEvent(BlockBreakEvent event, boolean firstCall) {	
 		Player player = event.getPlayer();
 		Block block = event.getBlock();
 		WorldCoord worldCoord;
 		try {
 			worldCoord = new WorldCoord(TownyUniverse.getWorld(block.getWorld().getName()), Coord.parseCoord(block));
+			
+			//Get build permissions (updates if none exist)
+			boolean bDestroy = plugin.getTownyUniverse().getCachePermission(player, block.getLocation(), TownyPermission.ActionType.DESTROY);
+			
+			PlayerCache cache = plugin.getCache(player);
+			TownBlockStatus status = cache.getStatus();
+			
+			if (!(status == TownBlockStatus.UNCLAIMED_ZONE && plugin.hasWildOverride(worldCoord.getWorld(), player, event.getBlock().getTypeId(), TownyPermission.ActionType.DESTROY)))
+				if (!bDestroy) {
+				    long delay = TownySettings.getRegenDelay();
+				    if(delay > 0) {
+				        if(!plugin.getTownyUniverse().isPlaceholder(block)) {
+					    	if (!plugin.getTownyUniverse().hasProtectionRegenTask(new BlockLocation(block.getLocation()))) {
+		        				ProtectionRegenTask task = new ProtectionRegenTask(plugin.getTownyUniverse(), block, true);
+		        				task.setTaskId(plugin.getServer().getScheduler().scheduleSyncDelayedTask(plugin, task, 20*delay));
+		        				plugin.getTownyUniverse().addProtectionRegenTask(task);
+					    	}
+				        } else {
+				            plugin.getTownyUniverse().removePlaceholder(block);
+				            block.setTypeId(0, false);
+				        }
+				    }
+		            event.setCancelled(true);
+		        }
+			if (cache.hasBlockErrMsg())
+				plugin.sendErrorMsg(player, cache.getBlockErrMsg());
+			
+
 		} catch (NotRegisteredException e1) {
 			plugin.sendErrorMsg(player, TownySettings.getLangString("msg_err_not_configured"));
 			event.setCancelled(true);
 			return;
 		}
 
-		// Check cached permissions first
-		try {
-			PlayerCache cache = plugin.getCache(player);
-			cache.updateCoord(worldCoord);
-			TownBlockStatus status = cache.getStatus();
-			if (status == TownBlockStatus.UNCLAIMED_ZONE && plugin.hasWildOverride(worldCoord.getWorld(), player, event.getBlock().getTypeId(), TownyPermission.ActionType.DESTROY))
-				return;
-			if (!cache.getDestroyPermission()) {
-			    long delay = TownySettings.getRegenDelay();
-			    if(delay > 0) {
-			        if(!plugin.getTownyUniverse().isPlaceholder(block)) {
-				    	if (!plugin.getTownyUniverse().hasProtectionRegenTask(new BlockLocation(block.getLocation()))) {
-	        				ProtectionRegenTask task = new ProtectionRegenTask(plugin.getTownyUniverse(), block, true);
-	        				task.setTaskId(plugin.getServer().getScheduler().scheduleSyncDelayedTask(plugin, task, 20*delay));
-	        				plugin.getTownyUniverse().addProtectionRegenTask(task);
-				    	}
-			        } else {
-			            plugin.getTownyUniverse().removePlaceholder(block);
-			            block.setTypeId(0, false);
-			        }
-			    }
-	            event.setCancelled(true);
-            }
-			if (cache.hasBlockErrMsg())
-				plugin.sendErrorMsg(player, cache.getBlockErrMsg());
-			return;
-		} catch (NullPointerException e) {
-			if (firstCall) {
-				// New or old destroy permission was null, update it
-				TownBlockStatus status = plugin.cacheStatus(player, worldCoord, plugin.getStatusCache(player, worldCoord));
-				plugin.cacheDestroy(player, worldCoord, getDestroyPermission(player, status, worldCoord));
-				onBlockBreakEvent(event, false);
-			} else
-				plugin.sendErrorMsg(player, TownySettings.getLangString("msg_err_updating_destroy_perms"));
-		}
+		plugin.sendDebugMsg("onBlockBreakEvent took " + (System.currentTimeMillis() - start) + "ms ("+event.getPlayer().getName()+", "+event.isCancelled() +")");
 	}
 
 	@Override
 	public void onBlockPlace(BlockPlaceEvent event) {
-		
-		//System.out.println("[Towny] BlockPlaceEvent");
 		
 		if (event.isCancelled()) {
 			event.setCancelled(true);
@@ -161,7 +141,45 @@ public class TownyBlockListener extends BlockListener {
 		
 		long start = System.currentTimeMillis();
 
-		onBlockPlaceEvent(event, true, null);
+		Player player = event.getPlayer();
+		Block block = event.getBlock();
+		WorldCoord worldCoord;
+		try {
+			worldCoord = new WorldCoord(TownyUniverse.getWorld(block.getWorld().getName()), Coord.parseCoord(block));
+			
+			//Get build permissions (updates if none exist)
+			boolean bBuild = plugin.getTownyUniverse().getCachePermission(player, block.getLocation(), TownyPermission.ActionType.BUILD);
+			
+			PlayerCache cache = plugin.getCache(player);
+			TownBlockStatus status = cache.getStatus();
+			
+			if (!(status == TownBlockStatus.UNCLAIMED_ZONE && plugin.hasWildOverride(worldCoord.getWorld(), player, event.getBlock().getTypeId(), TownyPermission.ActionType.BUILD)))
+				if (((status == TownBlockStatus.ENEMY && TownyWarConfig.isAllowingAttacks()) || status == TownBlockStatus.ADMIN)
+						&& event.getBlock().getType() == TownyWarConfig.getFlagBaseMaterial()) {
+						//&& plugin.hasPlayerMode(player, "warflag")) {
+					try {
+						if (TownyWar.callAttackCellEvent(plugin, player, block, worldCoord))
+							return;
+					} catch (TownyException e) {
+						plugin.sendErrorMsg(player, e.getMessage());
+					}
+					
+					event.setBuild(false);
+					event.setCancelled(true);
+					
+				} else {
+					if (!bBuild) {
+						event.setBuild(false);
+						event.setCancelled(true);
+					}
+					if (cache.hasBlockErrMsg())
+						plugin.sendErrorMsg(player, cache.getBlockErrMsg());
+				}
+			
+		} catch (NotRegisteredException e1) {
+			plugin.sendErrorMsg(player, TownySettings.getLangString("msg_err_not_configured"));
+			event.setCancelled(true);
+		}
 
 		plugin.sendDebugMsg("onBlockPlacedEvent took " + (System.currentTimeMillis() - start) + "ms ("+event.getPlayer().getName()+", "+event.isCancelled() +")");
 	}
@@ -227,17 +245,13 @@ public class TownyBlockListener extends BlockListener {
 
 		List<Block> blocks = event.getBlocks();
 		
-		//TownBlock CurrentTownBlock = null, destinationTownBlock = null;
-		
 		if (!blocks.isEmpty()) {
 			//check each block to see if it's going to pass a plot boundary
 			for (Block block : blocks) {				
 				if (testBlockMove(block, event.getDirection()))
 					event.setCancelled(true);
 			}
-		}
-		
-		
+		}	
 	}
 	
 	private boolean testBlockMove(Block block, BlockFace direction) {
@@ -267,8 +281,6 @@ public class TownyBlockListener extends BlockListener {
 		
 		if (CurrentTownBlock != destinationTownBlock) {
 
-			//System.out.print("Testing TownBlocks");
-			
 			// Cancel if either is not null, but other is (wild to town).
 			if ((CurrentTownBlock == null && destinationTownBlock != null)
 			|| (CurrentTownBlock != null && destinationTownBlock == null)) {
@@ -283,73 +295,15 @@ public class TownyBlockListener extends BlockListener {
 		
 						|| (CurrentTownBlock.getPlotPrice() != -1)
 						|| (destinationTownBlock.getPlotPrice() != -1)) {
-					//event.setCancelled(true);
 					return true;
 				}
 			} catch (NotRegisteredException e) {
 				// Failed to fetch a resident
-				//event.setCancelled(true);
 				return true;
 			}
 		}
 		
 		return false;
-	}
-	
-	public boolean t(String msg) {
-		System.out.println("Debug > "+msg);
-		return true;
-	}
-
-	public void onBlockPlaceEvent(BlockPlaceEvent event, boolean firstCall, String errMsg) {
-		Player player = event.getPlayer();
-		Block block = event.getBlock();
-		WorldCoord worldCoord;
-		try {
-			worldCoord = new WorldCoord(TownyUniverse.getWorld(block.getWorld().getName()), Coord.parseCoord(block));
-		} catch (NotRegisteredException e1) {
-			plugin.sendErrorMsg(player, TownySettings.getLangString("msg_err_not_configured"));
-			event.setCancelled(true);
-			return;
-		}
-
-		// Check cached permissions first
-		try {
-			PlayerCache cache = plugin.getCache(player);
-			cache.updateCoord(worldCoord);
-			TownBlockStatus status = cache.getStatus();
-			if (status == TownBlockStatus.UNCLAIMED_ZONE && plugin.hasWildOverride(worldCoord.getWorld(), player, event.getBlock().getTypeId(), TownyPermission.ActionType.BUILD))
-				return;
-			if (((status == TownBlockStatus.ENEMY && TownyWarConfig.isAllowingAttacks()) || status == TownBlockStatus.ADMIN)
-					&& event.getBlock().getType() == TownyWarConfig.getFlagBaseMaterial()) {
-					//&& plugin.hasPlayerMode(player, "warflag")) {
-				try {
-					if (TownyWar.callAttackCellEvent(plugin, player, block, worldCoord))
-						return;
-				} catch (TownyException e) {
-					plugin.sendErrorMsg(player, e.getMessage());
-				}
-				
-				event.setBuild(false);
-				event.setCancelled(true);
-				return;
-			}
-			if (!cache.getBuildPermission()) { // If build cache is empty, throws null pointer
-				event.setBuild(false);
-				event.setCancelled(true);
-			}
-			if (cache.hasBlockErrMsg())
-				plugin.sendErrorMsg(player, cache.getBlockErrMsg());
-			return;
-		} catch (NullPointerException e) {
-			if (firstCall) {
-				// New or old build permission was null, update it
-				TownBlockStatus status = plugin.cacheStatus(player, worldCoord, plugin.getStatusCache(player, worldCoord));
-				plugin.cacheBuild(player, worldCoord, getBuildPermission(player, status, worldCoord));
-				onBlockPlaceEvent(event, false, errMsg);
-			} else
-				plugin.sendErrorMsg(player, TownySettings.getLangString("msg_err_updating_build_perms"));
-		}
 	}
 	
 	private boolean onBurn(Block block) {
@@ -372,58 +326,4 @@ public class TownyBlockListener extends BlockListener {
 		return false;
 	}
 	
-	/*
-	
-	public void onBlockInteractEvent(BlockInteractEvent event, boolean firstCall, String errMsg) {
-		if (event.getEntity() != null && event.getEntity() instanceof Player) {
-			Player player = (Player)event.getEntity();
-			Block block = event.getBlock();
-			
-			if (!TownySettings.isSwitchId(block.getTypeId()))
-				return;
-
-			WorldCoord worldCoord;
-			try {
-				worldCoord = new WorldCoord(plugin.getTownyUniverse().getWorld(block.getWorld().getName()), Coord.parseCoord(block));
-			} catch (NotRegisteredException e1) {
-				plugin.sendErrorMsg(player, "This world has not been configured by Towny.");
-				event.setCancelled(true);
-				return;
-			}
-	
-			// Check cached permissions first
-			try {
-				PlayerCache cache = plugin.getCache(player);
-				cache.updateCoord(worldCoord);
-				TownBlockStatus status = cache.getStatus();
-				if (status == TownBlockStatus.UNCLAIMED_ZONE && plugin.hasWildOverride(worldCoord.getWorld(), player, event.getBlock().getTypeId(), TownyPermission.ActionType.SWITCH))
-					return;
-				if (!cache.getSwitchPermission())
-					event.setCancelled(true);
-				if (cache.hasBlockErrMsg())
-					plugin.sendErrorMsg(player, cache.getBlockErrMsg());
-				return;
-			} catch (NullPointerException e) {
-				if (firstCall) {
-					// New or old build permission was null, update it
-					TownBlockStatus status = plugin.cacheStatus(player, worldCoord, plugin.getStatusCache(player, worldCoord));
-					plugin.cacheSwitch(player, worldCoord, getSwitchPermission(player, status, worldCoord));
-					onBlockInteractEvent(event, false, errMsg);
-				} else
-					plugin.sendErrorMsg(player, "Error updating switch permissions cache.");
-			}
-		}
-	}
-*/
-	public boolean getBuildPermission(Player player, TownBlockStatus status, WorldCoord pos) {
-		return plugin.getPermission(player, status, pos, TownyPermission.ActionType.BUILD);
-	}
-	
-	public boolean getDestroyPermission(Player player, TownBlockStatus status, WorldCoord pos) {
-		return plugin.getPermission(player, status, pos, TownyPermission.ActionType.DESTROY);
-	}
-	
-	public boolean getSwitchPermission(Player player, TownBlockStatus status, WorldCoord pos) {
-		return plugin.getPermission(player, status, pos, TownyPermission.ActionType.SWITCH);
-	}
 }
